# mercado

./: .gitignore  Cargo.toml  LICENSE  README.md  example.config.json  flake.nix  whitepaper.md
backend/: Cargo.toml
backend/proto/: api.proto  helloworld.proto
backend/src/: api.rs  client.rs  db.rs  funding_source.rs  main.rs  market.rs  mercado.rs  platform.rs
frontend/: Cargo.toml
lnbits/: .env  create-docker.sh  get-super-user.sh
src/: api.rs  cli.rs  client.rs  client_blocking.rs  db.rs  funding_source.rs  lib.rs  main.rs  mercado.rs
src/api/: impls.rs  mercado.rs  mod.rs  payment.rs  requests.rs  responses.rs  util.rs
src/lnbits/: client.rs  funding_source.rs  mod.rs
test/: new_prediction.json
