[package]
name = "mercado"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "server"
path = "src/main.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "cli"
path = "src/cli.rs"

[dependencies]
axum = "0.6"
async-trait = "0.1"
tokio = { version = "1", features = [ "full" ] }
rust_decimal = "1"
rust_decimal_macros = "1"
env_logger = "0.10.0"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
json = "0.12"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"]}
clap = { version = "4", features = ["derive"] }
thiserror = "1"
secp256k1 = { version = "0.27" , features = ["rand-std", "bitcoin-hashes", "global-context", "serde"]}
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "sqlite" ] }
anyhow = { version = "1.0", features = [] }
tower = "0.4"
axum-macros = "0.3"
reqwest = { version = "0.11", features = ["json"]}
