[package]
name = "mercado"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "server"
path = "src/main.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "cli"
path = "src/cli.rs"

[dependencies]
axum = { version = "0.6", optional = true}
async-trait = { version = "0.1", optional = true}
tokio = { version = "1", features = [ "full" ] , optional = true}
rust_decimal = {version = "1", optional = true}
rust_decimal_macros = {version = "1", optional = true}
env_logger = {version = "0.10.0", optional = true}
futures-util = { version = "0.3", default-features = false, features = ["std"] , optional = true}
json = {version = "0.12", optional = true}
log = {version = "0.4", optional = true}
serde = { version = "1.0", features = ["derive"] , optional = true}
serde_json = {version = "1.0", optional = true}
chrono = { version = "0.4", features = ["serde"], optional = true}
clap = { version = "4", features = ["derive"], optional = true }
thiserror = {version = "1", optional = true}
secp256k1 = { version = "0.27" , features = ["rand-std", "bitcoin-hashes", "global-context", "serde"], optional = true}
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "sqlite", "chrono"], optional = true }
anyhow = { version = "1.0", features = [], optional = true }
tower = {version = "0.4", optional = true}
axum-macros = {version = "0.3", optional = true}
reqwest = { version = "0.11", features = ["json", "blocking"], optional = true}
config = { version = "0.13", optional = true}

[features]
default = ["dep:axum", "dep:async-trait", "dep:tokio", "dep:rust_decimal", "dep:rust_decimal_macros",
"dep:env_logger", "dep:futures-util", "dep:json", "dep:log", "dep:serde", "dep:serde_json", 
"dep:chrono", "dep:clap", "dep:thiserror", "dep:secp256k1", "dep:sqlx", "dep:anyhow", "dep:tower", "dep:axum-macros", 
"dep:reqwest", "dep:config"]
client = ["dep:reqwest", "dep:chrono", "dep:serde", "dep:secp256k1", "dep:anyhow", "dep:log", "dep:rust_decimal"]
blocking = []
