[package]
name = "mercado-backend"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "server"
path = "src/main.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "cli"
path = "src/client.rs"

[dependencies]
tokio = { version = "1.19", features = [ "full" ] }
rust_decimal = "1.25"
rust_decimal_macros = "1.25"
env_logger = "0.10.0"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
json = "0.12"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tonic = "0.8"
prost = "0.11"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
nostr-sdk = "0.16"

[build-dependencies]
tonic-build = "0.8"

